# edgar_k_mod1_atsiskaitymas

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
edgar_k_mod1_atsiskaitymas/: web_crawling.py
examples/camelia/: camelia_rezultatas.csv
examples/varle/: varle_rezultatas.csv
tests/: test_web_crawling.py
