[tool.poetry]
name = "edgar_k_mod1_atsiskaitymas"
version = "0.1.0"
description = "The first module of the Python Crash Course project"
authors = ["Edgar Kalinovski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
requests = "^2.32.3"
datetime = "^5.5"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
